--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
+    "tonal": "^6.3.0",
     "web-vitals": "^2.1.4"
   },
-
   "engines": {
     "node": "16.x"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
